--- a/FrontEnd/Pages/HomePage.html
+++ b/FrontEnd/Pages/HomePage.html
@@ -46,6 +46,13 @@
         .page-section.active {
             display: block;
         }
+        #serviceSection{
+            background-color: #1f2937;
+        }
+        #serviceSection>.container>h2{
+            color: white !important;
+            text-transform: uppercase;
+        }
     </style>
 </head>
 <body>
@@ -73,7 +80,7 @@
     </section>
 
     <!-- Services Section -->
-    <section class="py-5">
+    <section class="py-5" id="serviceSection">
         <div class="container">
             <h2 class="text-center mb-5">Our Services</h2>
             <div class="row">
