--- a/FrontEnd/Pages/navbar.html
+++ b/FrontEnd/Pages/navbar.html
@@ -6,7 +6,14 @@
   <title>NeedItDone - You post it, they do it</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-
+  <style>
+    .navbar{
+      background-color: #1f2937 !important;
+    }
+    .nav-link,.navbar-brand{
+     color: white!important;
+    }
+  </style>
 </head>
 <body>
 <!-- Navigation -->
