--- a/FrontEnd/Pages/HomePage.html
+++ b/FrontEnd/Pages/HomePage.html
@@ -8,13 +8,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #2563eb;
-            --secondary-color: #1e40af;
+            --primary-color: #2761df;
+            --secondary-color: #020717;
             --accent-color: #f59e0b;
             --success-color: #10b981;
             --danger-color: #ef4444;
             --dark-color: #1f2937;
-            --light-color: #f8fafc;
+            --light-color: #a8a9ac;
         }
 
         body {
@@ -33,11 +33,13 @@
             transition: transform 0.3s ease;
             border: none;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #1f2937;
+            color: white;
         }
 
         .service-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 8px 25px rgb(1, 113, 113);
         }
         .page-section {
             display: none;
@@ -47,7 +49,7 @@
             display: block;
         }
         #serviceSection{
-            background-color: #1f2937;
+            background-color: #000000;
         }
         #serviceSection>.container>h2{
             color: white !important;
@@ -86,13 +88,67 @@
                 font-size: 45px;
             }
         }
+        .card {
+            position: relative;
+            width: 400px;
+            height: 250px;
+            border-radius: 4px;
+            z-index: 1111;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 2px 2px 6px #5205d6, -2px -2px 6px #0c67dc;
+        ;
+        }
+        .navbar{
+            background-color: #1f2937 !important;
+        }
+        .nav-link,.navbar-brand{
+            color: white!important;
+        }
+
 
     </style>
 </head>
 <body>
+
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <div class="container">
+        <a class="navbar-brand" href="HomePage.html">
+            <i class="fas fa-tools me-2"></i>NeedItDone
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="HomePage.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="LogIn.html">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="SignUpPage.html">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Homeowner</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Worker</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Admin</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <!-- Home Page -->
-<div id="navbar"></div>
-<div id="home" class="page-section active">
+<div id="login" class="page-section active">
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
@@ -118,8 +174,9 @@
     <section class="py-5" id="serviceSection">
         <div class="container">
             <h2 class="text-center mb-5">Our Services</h2>
+
             <div class="row">
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4" >
                     <div class="card service-card h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-wrench fa-3x text-primary mb-3"></i>
@@ -181,9 +238,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script>
-    $(function () {
-        $("#navbar").load("navbar.html");
-    });
+    function showPage(page) {
+        if(page === 'register') {
+            window.location.href = "Login.html";
+        }
+    }
 </script>
 
 </body>
