--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -1,57 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NeedItDone - You post it, they do it</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  <style>
-    body{
-      overflow: hidden;
-    }
-    #navbar{
-      background-color: #1f2937;
-    }
-    #container{
-      width: auto;
-      min-width: 450px;
-    }
-    .page-section{
-      width: 100%;
-      height: 95vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #000000;
-    }
-    .btn:hover{
-      background-color: #10b981 !important;
-    }
-    .btn{
-      text-transform: uppercase;
-      color: #ffffff !important;
-      background-color: #1e40af !important;
-      margin-top: 70px;
-    }
-    a{
-      text-align: center;
-      font-size: 13px;
-    }
-    a:hover{
-      color: #ef4444;
-    }
-
-    #cardS{
-      height: 450px;
-    }
-
-  </style>
+<link rel="stylesheet" href="../Css/Login.css">
 
 </head>
 <body>
-<!-- Login Page -->
-<div id="navbar"></div>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <div class="container">
+    <a class="navbar-brand" href="HomePage.html">
+      <i class="fas fa-tools me-2"></i>NeedItDone
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="HomePage.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="LogIn.html">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="SignUpPage.html">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Homeowner</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Worker</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Admin</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- Login Page
 <div id="login" class="page-section">
   <div id="container" class="container">
     <div class="login-container mt-1">
@@ -80,15 +72,57 @@
       </div>
     </div>
   </div>
+</div>-->
+<div class="wrapper">
+  <form class="form">
+    <span class="title">Login</span>
+
+    <div class="input-container">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <defs><linearGradient id="gradient-stroke" x1="0" y1="0" x2="24" y2="24" gradientUnits="userSpaceOnUse">
+            <stop offset="0%" stop-color="black"></stop><stop offset="100%" stop-color="white"></stop></linearGradient></defs><g stroke="url(#gradient-stroke)" fill="none" stroke-width="1">
+          <path d="M21.6365 5H3L12.2275 12.3636L21.6365 5Z"></path>
+          <path d="M16.5 11.5L22.5 6.5V17L16.5 11.5Z"></path>
+          <path d="M8 11.5L2 6.5V17L8 11.5Z"></path>
+          <path d="M9.5 12.5L2.81805 18.5002H21.6362L15 12.5L12 15L9.5 12.5Z"></path>
+        </g>
+      </svg>
+      <input class="input" type="text" placeholder="UserName" />
+    </div>
+
+    <div class="input-container">
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g stroke="url(#gradient-stroke)" fill="none" stroke-width="1">
+          <path d="M3.5 15.5503L9.20029 9.85L12.3503 13L11.6 13.7503H10.25L9.8 15.1003L8 16.0003L7.55 18.2503L5.5 19.6003H3.5V15.5503Z"></path>
+          <path d="M16 3.5H11L8.5 6L16 13.5L21 8.5L16 3.5Z"></path>
+          <path d="M16 10.5L18 8.5L15 5.5H13L12 6.5L16 10.5Z"></path>
+        </g>
+      </svg>
+      <input class="input" type="password" placeholder="Password" />
+    </div>
+
+    <div class="login-button">
+      <input class="input" type="submit" value="Login" />
+    </div>
+
+    <div class="text-center mt-3">
+      <a href="#" onclick="showPage('register')">Don't have an account? Register here</a>
+    </div>
+
+    <div class="texture"></div>
+  </form>
 </div>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script>
-  $(function () {
-    $("#navbar").load("navbar.html");
-  });
-</script>
 
+  function showPage(page) {
+    if (page==='register'){
+      window.location.href="SignUpPage.html"
+    }
+  }
+</script>
 </body>
 </html>
