Add navigateTO Method in Javascript

--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="text-center mt-3">
-      <a href="#" onclick="showPage('register')">Don't have an account? Register here</a>
+      <a href="#" onclick="navigateTo('register')">Don't have an account? Register here</a>
     </div>
 
     <div class="texture"></div>
@@ -116,13 +116,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-<script>
-
-  function showPage(page) {
-    if (page==='register'){
-      window.location.href="SignUpPage.html"
-    }
-  }
-</script>
+<script src="../Js/Login.js"></script>
 </body>
 </html>
