--- a/FrontEnd/Pages/HomePage.html
+++ b/FrontEnd/Pages/HomePage.html
@@ -157,12 +157,12 @@
             <p class="lead mb-4">Connect with skilled professionals for all your home service needs</p>
             <div class="row justify-content-center">
                 <div class="col-md-4 mb-3">
-                    <button class="btn btn-light btn-lg w-100" onclick="showPage('register')">
+                    <button class="btn btn-light btn-lg w-100" onclick="navigateTo('register')">
                         <i class="fas fa-home me-2"></i>I Need Services
                     </button>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <button class="btn btn-outline-light btn-lg w-100" onclick="showPage('register')">
+                    <button class="btn btn-outline-light btn-lg w-100" onclick="navigateTo('register')">
                         <i class="fas fa-wrench me-2"></i>I Provide Services
                     </button>
                 </div>
@@ -237,13 +237,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-<script>
-    function showPage(page) {
-        if(page === 'register') {
-            window.location.href = "Login.html";
-        }
-    }
-</script>
-
+<script src="../Js/HomePage.js"></script>
 </body>
 </html>
