--- a/FrontEnd/Pages/SignUpPage.html
+++ b/FrontEnd/Pages/SignUpPage.html
@@ -111,7 +111,7 @@
     </div>
 
     <div class="text-center mt-3">
-      <a href="#" onclick="showPage('login')">Already have an account? Login here</a>
+      <a href="#" onclick="navigateTo('login')">Already have an account? Login here</a>
     </div>
 
     <div class="texture"></div>
@@ -120,12 +120,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-<script>
-  function showPage(page) {
-    if (page==='login'){
-      window.location.href="LogIn.html"
-    }
-  }
-</script>
+<script src="../Js/SignUp.js"></script>
 </body>
 </html>
