--- a/FrontEnd/Pages/HomePage.html
+++ b/FrontEnd/Pages/HomePage.html
@@ -112,7 +112,7 @@
                     <a class="nav-link" href="SignUpPage.html">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Homeowner</a>
+                    <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Worker</a>
