Add Workers Section

--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Worker</a>
+          <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Admin</a>
