--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Worker</a>
+                    <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Admin</a>
