Add styles for Admin DashBoard

--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -7,6 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="../Css/AdminDashBoard.css">
 </head>
 <body>
 <!-- Navigation -->
@@ -36,7 +37,7 @@
                     <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Admin</a>
+                    <a class="nav-link" href="Admin.html">Admin</a>
                 </li>
             </ul>
         </div>
@@ -57,11 +58,11 @@
 <!-- Enhanced navigation panel -->
 <div class="side-nav" id="sideNav">
     <ul class="nav-menu">
-        <li><a href="#dashboard-post-job-content" data-target="add-job"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-        <li><a href="#homeowner-post-job-content" data-section="homeowner-post-job-content" ><i class="fas fa-pen-square"></i> Post a Job</a></li>
-        <li><a href="#homeowner-my-jobs-content" ><i class="fas fa-briefcase"></i> My Jobs</a></li>
-        <li><a href="#homeowner-applications-content"><i class="fas fa-file-alt"></i> Applications</a></li>
-        <li><a href="#homeowner-profile-content"><i class="fas fa-user-circle"></i> Profile</a></li>
+        <li><a href="#admin-dashboard-content" data-target="add-job"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+        <li><a href="#admin-users-content"><i class="fas fa-user-circle"></i> Users</a></li>
+        <li><a href="#admin-jobs-content" ><i class="fas fa-briefcase"></i> Jobs</a></li>
+<!--        <li><a href="#homeowner-post-job-content" data-section="homeowner-post-job-content" ><i class="fas fa-pen-square"></i> Post a Job</a></li>-->
+<!--        <li><a href="#homeowner-applications-content"><i class="fas fa-file-alt"></i> Applications</a></li>-->
     </ul>
 </div>
 <div class="demo-content">
