--- a/FrontEnd/Pages/HomePage.html
+++ b/FrontEnd/Pages/HomePage.html
@@ -118,7 +118,7 @@
                     <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Admin</a>
+                    <a class="nav-link" href="HomePage.html">Admin</a>
                 </li>
             </ul>
         </div>
