--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Admin</a>
+                    <a class="nav-link" href="Admin.html">Admin</a>
                 </li>
             </ul>
         </div>
