--- a/FrontEnd/Pages/WorkersDashBoard.html
+++ b/FrontEnd/Pages/WorkersDashBoard.html
@@ -34,10 +34,10 @@
             <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Worker</a>
+            <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Admin</a>
+            <a class="nav-link" href="Admin.html">Admin</a>
           </li>
         </ul>
       </div>
