--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -179,7 +179,7 @@
                 <div id="admin-users-content" class="dashboard-section">
                     <h2 class="mb-4">User Management</h2>
                     <div class="row mb-3">
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-3">
                             <select class="form-select" id="userTypeFilter">
                                 <option value="">All User Types</option>
                                 <option value="homeowner">Homeowners</option>
@@ -187,7 +187,7 @@
                                 <option value="admin">Admins</option>
                             </select>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-3">
                             <select class="form-select" id="userStatusFilter">
                                 <option value="">All Status</option>
                                 <option value="active">Active</option>
@@ -221,7 +221,7 @@
                 <div id="admin-jobs-content" class="dashboard-section">
                     <h2 class="mb-4">Job Management</h2>
                     <div class="row mb-3">
-                        <div class="col-md-3">
+                        <div class="col-md-3 mb-3">
                             <select class="form-select" id="jobCategoryFilter">
                                 <option value="">All Categories</option>
                                 <option value="plumbing">Plumbing</option>
@@ -232,7 +232,7 @@
                                 <option value="painting">Painting</option>
                             </select>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 mb-3">
                             <select class="form-select" id="jobStatusFilter">
                                 <option value="">All Status</option>
                                 <option value="open">Open</option>
@@ -241,7 +241,7 @@
                                 <option value="cancelled">Cancelled</option>
                             </select>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 mb-3">
                             <select class="form-select" id="jobDateFilter">
                                 <option value="">All Dates</option>
                                 <option value="today">Today</option>
@@ -274,5 +274,6 @@
         </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="../Js/AdminDashBoard.js"></script>
 </body>
 </html>
