Add User Interface Updates- Html and Js

--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -31,10 +31,7 @@
           <a class="nav-link" href="SignUpPage.html">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
+          <a class="nav-link" href="HomeOwnerDashBoard.html">User</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Admin.html">Admin</a>
