--- a/FrontEnd/Pages/WorkersDashBoard.html
+++ b/FrontEnd/Pages/WorkersDashBoard.html
@@ -31,11 +31,9 @@
             <a class="nav-link" href="SignUpPage.html">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
+            <a class="nav-link" href="HomeOwnerDashBoard.html">User</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="Admin.html">Admin</a>
           </li>
@@ -395,9 +393,9 @@
 
       <!-- Worker Profile Section -->
       <div id="worker-profile-content" class="dashboard-section">
-                <h2 class="mb-4">Worker Profile</h2>
-                <div class="row">
-                  <div class="col-md-8">
+        <h2 class="mb-4">Worker Profile</h2>
+        <div class="row">
+          <div class="col-md-8">
                     <div class="card">
                       <div class="card-body">
                         <form>
@@ -443,13 +441,31 @@
                       </div>
                     </div>
                   </div>
-                </div>
+          <!-- Switch Mode card -->
+          <div id="switchMode" class="col-md-4 mt-4 mt-md-0">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 style="text-transform: uppercase; font-size: 15px; padding-top:2px; margin-right: 10px">
+                  Do You wish to Switch ?
+                </h5>
+                <button id="switch" class="btn-custom">Switch Mode</button>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="../Js/WorkersDashBoard.js"></script>
+  <script>
+
+
+  </script>
+
+
   </body>
   </html>
