--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -32,10 +32,7 @@
                     <a class="nav-link" href="SignUpPage.html">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
+                    <a class="nav-link" href="HomeOwnerDashBoard.html">User</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Admin.html">Admin</a>
@@ -66,6 +63,7 @@
         <li><a href="#homeowner-profile-content"><i class="fas fa-user-circle"></i> Profile</a></li>
     </ul>
 </div>
+
 <div class="demo-content">
     <div class="col-md-10 p-4">
         <!-- Dashboard Overview -->
@@ -351,6 +349,7 @@
         <section id="homeowner-profile-content" class="dashboard-section">
             <h2 class="mb-4">Profile Settings</h2>
             <div class="row">
+                <!-- Profile form -->
                 <div class="col-md-8">
                     <div class="card">
                         <div class="card-body">
@@ -382,13 +381,32 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Switch Mode card -->
+                <div id="switchMode" class="col-md-4 mt-4 mt-md-0">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <h5 style="text-transform: uppercase; font-size: 15px; padding-top:2px; margin-right: 10px">
+                                Do You wish to Switch ?
+                            </h5>
+                            <button id="switch" class="btn-custom">Switch Mode</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="../Js/HomeOwnerDashBoard.js"></script>
+<script>
+    $(document).ready(function (){
+
+    })
+
+</script>
 
 </body>
 </html>
