--- a/FrontEnd/Pages/HomePage.html
+++ b/FrontEnd/Pages/HomePage.html
@@ -34,10 +34,7 @@
                     <a class="nav-link" href="SignUpPage.html">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
+                    <a class="nav-link" href="HomeOwnerDashBoard.html">User</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="HomePage.html">Admin</a>
