--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -23,24 +23,12 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="HomePage.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="LogIn.html">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="SignUpPage.html">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="HomeOwnerDashBoard.html">Homeowner</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="WorkersDashBoard.html">Worker</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Admin.html">Admin</a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="HomePage.html">Home</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="Admin.html">Admin</a>-->
+<!--                </li>-->
             </ul>
         </div>
     </div>
