--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -22,21 +22,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
+             <!--   <li class="nav-item">
                     <a class="nav-link" href="HomePage.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="LogIn.html">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="SignUpPage.html">Register</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="HomeOwnerDashBoard.html">User</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Admin.html">Admin</a>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
@@ -401,12 +392,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="../Js/HomeOwnerDashBoard.js"></script>
-<script>
-    $(document).ready(function (){
-
-    })
-
-</script>
-
 </body>
 </html>
