--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -30,46 +30,10 @@
         <li class="nav-item">
           <a class="nav-link" href="SignUpPage.html">Register</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="HomeOwnerDashBoard.html">User</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Admin.html">Admin</a>
-        </li>
       </ul>
     </div>
   </div>
 </nav>
-<!-- Login Page
-<div id="login" class="page-section">
-  <div id="container" class="container">
-    <div class="login-container mt-1">
-      <div class="card shadow" id="cardS">
-        <div class="card-header bg-primary text-white text-center mb-3">
-          <h4><i class="fas fa-sign-in-alt me-2"></i>Login</h4>
-        </div>
-        <div class="card-body mt-3" id="cardBody">
-          <form id="frm">
-            <div class="mb-3">
-              <label for="loginEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="loginEmail" required>
-            </div>
-            <div class="mb-3">
-              <label for="loginPassword" class="form-label">Password</label>
-              <input type="password" class="form-control" id="loginPassword" required>
-            </div>
-            <div id="loginButtnDiv">
-              <button type="submit" class="btn btn-custom w-100">Login</button>
-            </div>
-          </form>
-          <div class="text-center mt-3">
-            <a href="#" onclick="showPage('register')">Don't have an account? Register here</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>-->
 <div class="wrapper">
   <form class="form">
     <span class="title">Login</span>
@@ -99,7 +63,7 @@
     </div>
 
     <div class="login-button">
-      <input class="input" type="submit" value="Login" />
+      <input id="loginBtn" class="input" type="submit" value="Login" />
     </div>
 
     <div class="text-center mt-3">
