--- a/FrontEnd/Pages/SignUpPage.html
+++ b/FrontEnd/Pages/SignUpPage.html
@@ -98,7 +98,7 @@
     </div>
 
     <div class="signup-button">
-      <input class="input" type="submit" value="Sign Up" />
+      <input id="signUpBTN" class="input" type="button" value="Sign Up" />
     </div>
 
     <div class="text-center mt-3">
@@ -111,6 +111,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../Js/SignUp.js"></script>
 </body>
 </html>
