--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -48,7 +48,7 @@
           <path d="M9.5 12.5L2.81805 18.5002H21.6362L15 12.5L12 15L9.5 12.5Z"></path>
         </g>
       </svg>
-      <input class="input" type="text" placeholder="UserName" />
+      <input id="userNAME" class="input" type="text" placeholder="User name" required/>
     </div>
 
     <div class="input-container">
@@ -59,11 +59,11 @@
           <path d="M16 10.5L18 8.5L15 5.5H13L12 6.5L16 10.5Z"></path>
         </g>
       </svg>
-      <input class="input" type="password" placeholder="Password" />
+      <input id="passWORD" class="input" type="password" placeholder="Password" required/>
     </div>
 
     <div class="login-button">
-      <input id="loginBtn" class="input" type="submit" value="Login" />
+      <input id="loginBtn" class="input" type="button" value="Login" />
     </div>
 
     <div class="text-center mt-3">
