Change to Form Submission and Add regex patterns

--- a/FrontEnd/Pages/LogIn.html
+++ b/FrontEnd/Pages/LogIn.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
 <div class="wrapper">
-  <form class="form">
+  <form class="form" id="loginForm">
     <span class="title">Login</span>
 
     <div class="input-container">
@@ -63,7 +63,7 @@
     </div>
 
     <div class="login-button">
-      <input id="loginBtn" class="input" type="button" value="Login" />
+      <input id="loginBtn" class="input" type="submit" value="Login" />
     </div>
 
     <div class="text-center mt-3">
