Add SignOut Btn in User and Admin Pages

--- a/FrontEnd/Pages/WorkersDashBoard.html
+++ b/FrontEnd/Pages/WorkersDashBoard.html
@@ -13,31 +13,16 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
-      <a class="navbar-brand" href="HomePage.html">
+      <a class="navbar-brand" href="#worker-dashboard-content">
         <i class="fas fa-tools me-2"></i>NeedItDone
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="HomePage.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="LogIn.html">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="SignUpPage.html">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="HomeOwnerDashBoard.html">User</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="Admin.html">Admin</a>
-          </li>
-        </ul>
+      <div id="navbarNav">
+        <button id="logoutBTN" class="btn btn-danger ">
+          <i class="bi bi-box-arrow-right"></i> SIGN OUT
+        </button>
       </div>
     </div>
   </nav>
