--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -14,21 +14,13 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
-        <a class="navbar-brand" href="HomePage.html">
+        <a class="navbar-brand" href="#dashboard-post-job-content">
             <i class="fas fa-tools me-2"></i>NeedItDone
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-             <!--   <li class="nav-item">
-                    <a class="nav-link" href="HomePage.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="HomeOwnerDashBoard.html">User</a>
-                </li>-->
-            </ul>
+        <div id="navbarNav">
+            <button id="logoutBTN" class="btn btn-danger ">
+                <i class="bi bi-box-arrow-right"></i> SIGN OUT
+            </button>
         </div>
     </div>
 </nav>
@@ -392,5 +384,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="../Js/HomeOwnerDashBoard.js"></script>
+
 </body>
 </html>
