--- a/FrontEnd/Pages/Admin.html
+++ b/FrontEnd/Pages/Admin.html
@@ -21,15 +21,10 @@
             <i class="fas fa-bars"></i>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="HomePage.html">Home</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="Admin.html">Admin</a>-->
-<!--                </li>-->
-            </ul>
+        <div id="navbarNav">
+            <button id="logoutBTN" class="btn btn-danger ">
+                <i class="bi bi-box-arrow-right"></i> SIGN OUT
+            </button>
         </div>
     </div>
 </nav>
