--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -176,7 +176,7 @@
                                     <label for="jobDescription" class="form-label">Description</label>
                                     <textarea class="form-control" id="jobDescription" rows="4" placeholder="Describe the work needed..." required></textarea>
                                 </div>
-                                <div class="row">
+                               <!-- <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="jobBudget" class="form-label">Budget ($)</label>
                                         <input type="number" class="form-control" id="jobBudget" placeholder="0.00" min="0" step="0.01">
@@ -185,7 +185,7 @@
                                         <label for="jobDeadline" class="form-label">Deadline</label>
                                         <input type="date" class="form-control" id="jobDeadline">
                                     </div>
-                                </div>
+                                </div>-->
                                 <div class="mb-3">
                                     <label for="jobLocation" class="form-label">Location</label>
                                     <input type="text" class="form-control" id="jobLocation" placeholder="Job location/address" required>
