Load user details in the userinterface connecting two ends using JS

--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -341,26 +341,19 @@
                             <form>
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
-                                        <label for="profileFirstName" class="form-label">First Name</label>
-                                        <input type="text" class="form-control" id="profileFirstName" value="John">
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label for="profileLastName" class="form-label">Last Name</label>
-                                        <input type="text" class="form-control" id="profileLastName" value="Doe">
+                                        <label for="profileUserName" class="form-label">User Name</label>
+                                        <input type="text" class="form-control" id="profileUserName">
                                     </div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="profileEmail" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="profileEmail" value="john.doe@email.com">
+                                    <input type="email" class="form-control" id="profileEmail">
                                 </div>
                                 <div class="mb-3">
                                     <label for="profilePhone" class="form-label">Phone</label>
-                                    <input type="tel" class="form-control" id="profilePhone" value="+1234567890">
+                                    <input type="tel" class="form-control" id="profilePhone">
                                 </div>
-                                <div class="mb-3">
-                                    <label for="profileAddress" class="form-label">Address</label>
-                                    <textarea class="form-control" id="profileAddress" rows="2">123 Main Street, City, State 12345</textarea>
-                                </div>
+
                                 <button type="submit" class="btn btn-custom">Update Profile</button>
                             </form>
                         </div>
