--- a/FrontEnd/Pages/HomeOwnerDashBoard.html
+++ b/FrontEnd/Pages/HomeOwnerDashBoard.html
@@ -250,11 +250,125 @@
                     </div>
                     <div class="modal-footer justify-content-between">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" id="editJobBtn">Edit Job</button>
                     </div>
                 </div>
             </div>
         </div>
+       <!-- &lt;!&ndash; Edit Job Modal &ndash;&gt;
+        <div class="modal fade" id="editJobModal" tabindex="-1" aria-labelledby="editJobModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-content border-0 shadow-lg">
+                    <div class="modal-header bg-warning text-dark">
+                        <h5 class="modal-title" id="editJobModalLabel">Edit Job</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form id="editJobForm">
+                        <div class="modal-body" style="color: black">
+                            &lt;!&ndash; Hidden field to store Job ID &ndash;&gt;
+                            <input type="hidden" id="editJobId">
+
+                            <div class="mb-2">
+                                <label for="editJobTitle" class="form-label">Job Title</label>
+                                <input type="text" class="form-control" id="editJobTitle" required>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="editJobDescription" class="form-label">Description</label>
+                                <textarea class="form-control" id="editJobDescription" rows="3" required></textarea>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="editJobLocation" class="form-label">Location</label>
+                                <input type="text" class="form-control" id="editJobLocation" required>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="editJobCost" class="form-label">Cost</label>
+                                <input type="number" class="form-control" id="editJobCost" required>
+                            </div>
+                            <div class="mb-2">
+                                <label for="editJobDeadline" class="form-label">Deadline</label>
+                                <input type="date" class="form-control" id="editJobDeadline" required>
+                            </div>
+
+
+                            <div class="mb-2">
+                                <label for="editJobUrgency" class="form-label">Urgency</label>
+                                <select class="form-select" id="editJobUrgency" required>
+                                    <option value="low">Low</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="high">High</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="modal-footer justify-content-between">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-warning">Save Changes</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>-->
+
+        <!-- Edit Job Modal - Smaller Version -->
+        <div class="modal fade" id="editJobModal" tabindex="-1" aria-labelledby="editJobModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-md modal-dialog-centered"> <!-- changed modal-lg → modal-md -->
+                <div class="modal-content border-0 shadow-sm"> <!-- slightly smaller shadow -->
+                    <div class="modal-header bg-warning text-dark py-2"> <!-- reduced padding -->
+                        <h5 class="modal-title" id="editJobModalLabel">Edit Job</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form id="editJobForm">
+                        <div class="modal-body py-2" style="color: black; font-size: 0.95rem;"> <!-- smaller font -->
+                            <!-- Hidden field to store Job ID -->
+                            <input type="hidden" id="editJobId">
+
+                            <div class="mb-2">
+                                <label for="editJobTitle" class="form-label">Job Title</label>
+                                <input type="text" class="form-control form-control-sm" id="editJobTitle" required>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="editJobDescription" class="form-label">Description</label>
+                                <textarea class="form-control form-control-sm" id="editJobDescription" rows="3" required></textarea>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="editJobLocation" class="form-label">Location</label>
+                                <input type="text" class="form-control form-control-sm" id="editJobLocation" required>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="editJobCost" class="form-label">Cost</label>
+                                <input type="number" class="form-control form-control-sm" id="editJobCost" required>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="editJobDeadline" class="form-label">Deadline</label>
+                                <input type="date" class="form-control form-control-sm" id="editJobDeadline" required>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="editJobUrgency" class="form-label">Urgency</label>
+                                <select class="form-select form-select-sm" id="editJobUrgency" required>
+                                    <option value="low">Low</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="high">High</option>
+                                    <option value="urgent">Urgent</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="modal-footer justify-content-between py-2">
+                            <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-warning btn-sm">Save Changes</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
 
 
         <!-- Applications Section -->
